{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 215,
  "lineage": "85d90a02-3fbc-80d8-454a-4ff13c626907",
  "resources": [
    {
      "module": "module.lambda",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_lambdas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994580224546:security-group/sg-09daf4c63573253c4",
            "description": "Allow queries to dynamo through VPC endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "35.71.70.0/24",
                  "3.218.182.0/24",
                  "3.218.180.0/23",
                  "35.71.68.0/23",
                  "52.94.0.0/22",
                  "52.119.224.0/20"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09daf4c63573253c4",
            "ingress": [],
            "name": "allow_dynamo_vpce_queries",
            "name_prefix": "",
            "owner_id": "994580224546",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dynamo_vpc_sg"
            },
            "tags_all": {
              "Name": "dynamo_vpc_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f552f7be801dd08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-endpoint.aws_vpc_endpoint.dynamodb",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994580224546:vpc-endpoint/vpce-06ecf21e1b22cc135",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "id": "vpce-06ecf21e1b22cc135",
            "owner_id": "994580224546",
            "policy": "{\"Statement\":[{\"Action\":[\"dynamodb:BatchGetItem\",\"dynamodb:BatchWriteItem\",\"dynamodb:DeleteItem\",\"dynamodb:GetItem\",\"dynamodb:PutItem\",\"dynamodb:Query\",\"dynamodb:Scan\",\"dynamodb:UpdateItem\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-007c96ff25237f620"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01f552f7be801dd08"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994580224546:network-acl/acl-085d72173b1b03eed",
            "default_network_acl_id": "acl-085d72173b1b03eed",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-085d72173b1b03eed",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "994580224546",
            "subnet_ids": [
              "subnet-03105f16b4a4ed6aa"
            ],
            "tags": {
              "Name": "cloud-vpc-1-default"
            },
            "tags_all": {
              "Name": "cloud-vpc-1-default"
            },
            "vpc_id": "vpc-01f552f7be801dd08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994580224546:route-table/rtb-092e09dc4ce317db6",
            "default_route_table_id": "rtb-092e09dc4ce317db6",
            "id": "rtb-092e09dc4ce317db6",
            "owner_id": "994580224546",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloud-vpc-1-default"
            },
            "tags_all": {
              "Name": "cloud-vpc-1-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01f552f7be801dd08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994580224546:security-group/sg-07ed85ebc94cb66a9",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07ed85ebc94cb66a9",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "994580224546",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-vpc-1-default"
            },
            "tags_all": {
              "Name": "cloud-vpc-1-default"
            },
            "vpc_id": "vpc-01f552f7be801dd08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994580224546:route-table/rtb-007c96ff25237f620",
            "id": "rtb-007c96ff25237f620",
            "owner_id": "994580224546",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloud-vpc-1-private-us-east-1a"
            },
            "tags_all": {
              "Name": "cloud-vpc-1-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f552f7be801dd08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f16e3e5ac6f7c93e",
            "route_table_id": "rtb-007c96ff25237f620",
            "subnet_id": "subnet-03105f16b4a4ed6aa"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994580224546:subnet/subnet-03105f16b4a4ed6aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03105f16b4a4ed6aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "994580224546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-vpc-1-private-us-east-1a"
            },
            "tags_all": {
              "Name": "cloud-vpc-1-private-us-east-1a"
            },
            "vpc_id": "vpc-01f552f7be801dd08"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994580224546:vpc/vpc-01f552f7be801dd08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-085d72173b1b03eed",
            "default_route_table_id": "rtb-092e09dc4ce317db6",
            "default_security_group_id": "sg-07ed85ebc94cb66a9",
            "dhcp_options_id": "dopt-04f955fef51790aff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f552f7be801dd08",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092e09dc4ce317db6",
            "owner_id": "994580224546",
            "tags": {
              "Name": "cloud-vpc-1"
            },
            "tags_all": {
              "Name": "cloud-vpc-1"
            }
          }
        }
      ]
    }
  ]
}